correction du text align H3 qui était en justify au lieu de left et générait des problèmes d'affichage
transfert de la mise en forme du titre du aside dans le fichier aside
au lieu du fichier de la résolution 300

--- a/style/aside.css
+++ b/style/aside.css
@@ -1,3 +1,10 @@
 aside {
   display: none;
 }
+
+aside h2 {
+  text-align: center;
+  font-size: 1.1em;
+  margin: 20px 3px 20px 3px;
+}
+
