--- a/style/resolution_max300_troppetite.css
+++ b/style/resolution_max300_troppetite.css
@@ -19,12 +19,6 @@ aside {
   display: block;
 }
 
-aside h2 {
-  text-align: center;
-  font-size: 1.1em;
-  margin: 20px 3px 20px 3px;
-}
-
 footer {
   margin: 0px;
 }
